--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,6 +7,124 @@
     <groupId>fr.braddy</groupId>
     <artifactId>points-of-interest</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<url>http://maven.apache.org</url>
     
+<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+
+		<version.wildfly>10.1.0.Final</version.wildfly>
+		<version.arquillian>1.1.13.Final</version.arquillian>
+		<version.shrinkwrap.resolvers>3.0.0</version.shrinkwrap.resolvers>
+	</properties>
+	<dependencyManagement>
+  		<dependencies>
+  			<dependency>
+  				<groupId>org.wildfly.bom</groupId>
+  				<artifactId>wildfly-javaee7-with-tools</artifactId>		
+ 			<version>${version.wildfly}</version>
+  				<type>pom</type>
+  				<scope>import</scope>
+  			</dependency>
+  			
+  		</dependencies>
+  	</dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.17</version>
+		</dependency>
+
+	</dependencies>
+	<build>
+	<plugins>
+	<plugin>
+ 		<groupId>org.apache.maven.plugins</groupId>
+ 			<artifactId>maven-dependency-plugin</artifactId>
+ 				<executions>
+ 					<execution>
+ 						<id>unpack</id>
+ 						<phase>process-test-classes</phase>
+ 						<goals>
+ 							<goal>unpack</goal>
+ 						</goals>
+ 						<configuration>
+ 							<artifactItems>
+ 								<artifactItem>
+									<groupId>org.wildfly</groupId>
+ 									<artifactId>wildfly-dist</artifactId>
+ 									<version>${version.wildfly}</version>
+									<type>zip</type>
+ 									<overWrite>false</overWrite>
+									<outputDirectory>target</outputDirectory>
+								</artifactItem>
+ 							</artifactItems>
+						</configuration>
+ 					</execution>
+ 				</executions>
+			</plugin>
+ 
+ 		<plugin>
+ 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+ 				<configuration>
+ 					<!-- Fork every test because it will launch a separate AS instance -->
+ 					<forkMode>always</forkMode>
+ 					<systemPropertyVariables>
+ 						<jboss.home>${project.basedir}/target/wildfly-${version.wildfly}</jboss.home>
+ 						<java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+ 					</systemPropertyVariables>
+ 					<redirectTestOutputToFile>false</redirectTestOutputToFile>
+ 				</configuration>
+ 			</plugin>
+  		</plugins>
+	<pluginManagement>
+		<plugins>
+			<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+			<plugin>
+				<groupId>org.eclipse.m2e</groupId>
+				<artifactId>lifecycle-mapping</artifactId>
+				<version>1.0.0</version>
+				<configuration>
+					<lifecycleMappingMetadata>
+						<pluginExecutions>
+							<pluginExecution>
+								<pluginExecutionFilter>
+									<groupId>
+										org.apache.maven.plugins
+									</groupId>
+									<artifactId>
+										maven-dependency-plugin
+									</artifactId>
+									<versionRange>[2.8,)</versionRange>
+									<goals>
+										<goal>unpack</goal>
+									</goals>
+								</pluginExecutionFilter>
+								<action>
+									<ignore></ignore>
+								</action>
+							</pluginExecution>
+						</pluginExecutions>
+					</lifecycleMappingMetadata>
+				</configuration>
+			</plugin>
+		</plugins>
+	</pluginManagement>
+	</build>
 </project>
